BCV-20 fix CI/CD